gcc-14.2.0/gcc/testsuite/gm2/iso/pass/constructor4.mod
version https://git-lfs.github.com/spec/v1
oid sha256:cbca767deaaf3cd4ed9338761d211acf36d52fa2a04c2e7f8dcc2bfae6131b7a
size 1122
